# xplane_sdk

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  README.md  example_plugin.cpp
